[tool.poetry]
name = "module2"
version = "0.1.0"
description = ""
authors = ["harshvc91 <116171382+harshvc91@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.5.1"
pandas = "^2.2.2"
pydantic-settings = "^2.4.0"
loguru = "^0.7.2"
sqlalchemy = "^2.0.34"
flake8 = "^7.1.1"
wemake-python-styleguide = "^0.19.2"
ruff = "^0.6.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude=["src/config/__init__.py"]